deploy: a01b0a7fd6d0523f5061dbf30fe1b5e60d7927b0

--- a/Components_KnowledgeDashBoard.js.html
+++ b/Components_KnowledgeDashBoard.js.html
@@ -50,20 +50,12 @@
         <article>
             <pre class="prettyprint source linenums"><code>/* global chrome */
 // BOOKMARK import here
-import Button from '@jetbrains/ring-ui/dist/button/button';
 import {Menu, MenuItem, Sidebar, SubMenu, useProSidebar} from "react-pro-sidebar";
 import Island from "@jetbrains/ring-ui/dist/island/island";
-import Header from "@jetbrains/ring-ui/dist/header/header";
 import {H3, H4} from "@jetbrains/ring-ui/dist/heading/heading";
 import {useEffect, useState} from "react";
 import Img from 'react-image';
 import Loader from '@jetbrains/ring-ui/dist/loader/loader';
-import Tray from "@jetbrains/ring-ui/dist/header/tray";
-import TrayIcon from '@jetbrains/ring-ui/dist/header/tray-icon';
-import settingIcon from '@jetbrains/icons/settings';
-import collapseIcon from '@jetbrains/icons/collapse';
-import starIcon from '@jetbrains/icons/star-empty';
-import likeIcon from '@jetbrains/icons/vote-empty';
 import Text from '@jetbrains/ring-ui/dist/text/text';
 import '@jetbrains/icons/file-js'
 import Panel from "@jetbrains/ring-ui/dist/panel/panel";
@@ -72,16 +64,12 @@ import DraggableButton from "./KnowledgeDashBoard/DraggableButton";
 import 'rc-dropdown/assets/index.css';
 import Link from "@jetbrains/ring-ui/dist/link/link";
 import {Col, Grid, Row} from '@jetbrains/ring-ui/dist/grid/grid';
-import WolframIcon from '@jetbrains/icons/asterisk';
-import ButtonGroup from '@jetbrains/ring-ui/dist/button-group/button-group';
-import ReactTooltip from "react-tooltip";
-import LoaderInline from "@jetbrains/ring-ui/dist/loader-inline/loader-inline";
 import * as PropTypes from "prop-types";
 import {SettingsView} from "./SettingsView";
 import {WolframAlphaSearchArea} from "./WolframAlphaSearchArea";
-import {Readability} from "@mozilla/readability"
-import {uniq, filter} from "lodash";
+import {filter, uniq} from "lodash";
 import Badge from "@jetbrains/ring-ui/dist/badge/badge";
+import {KnowledgeDashBoardHeader} from "./KnowledgeDashBoardHeader";
 
 SettingsView.propTypes = {
     onKeyDown: PropTypes.func,
@@ -89,6 +77,21 @@ SettingsView.propTypes = {
 };
 
 
+KnowledgeDashBoardHeader.propTypes = {
+    onClick: PropTypes.func,
+    state: PropTypes.shape({
+        loadingDraggableButton: PropTypes.bool,
+        currentAssumption: PropTypes.string,
+        dashBoardHidden: PropTypes.bool,
+        loadingResult: PropTypes.bool,
+        currentQuery: PropTypes.string,
+        currentView: PropTypes.string,
+        queryResult: PropTypes.arrayOf(PropTypes.any),
+        buttonPosition: PropTypes.shape({x: PropTypes.number, y: PropTypes.number})
+    }),
+    onClick1: PropTypes.func,
+    onClick2: PropTypes.func
+};
 /**
  * @desc This is Knowledge Dashboard
  * @class KnowledgeDashBoard
@@ -121,14 +124,15 @@ export default function KnowledgeDashBoard() {
         }
     })
     const [currentPageReadability, setCurrentPageReadability] = useState(undefined);
-    const [entities, setEntities] = useState(undefined);
+    const [extensionEntities, setExtensionEntities] = useState(undefined);
     window.onload = () => {
-        console.log("page is fully loaded")
+        /*console.log("page is fully loaded")
         const clonedDocument = document.cloneNode(true)
         const pageReadability = new Readability(clonedDocument).parse()
+        console.log("pageReadability", pageReadability.textContent)
         if (currentPageReadability !== pageReadability) {
             setCurrentPageReadability(pageReadability)
-        }
+        }*/
     }
 
     useEffect(() => {
@@ -136,13 +140,13 @@ export default function KnowledgeDashBoard() {
             const entities = result.response.entities
             const highConfidenceAndRelevanceEntities = filter(entities, (entity) => entity.confidenceScore > 5.0 &amp;&amp; entity.relevanceScore > 0.9)
             const uniqueEntitiesId = uniq(highConfidenceAndRelevanceEntities.map((entity) => entity.entityId))
-            setEntities(uniqueEntitiesId)
+            setExtensionEntities(uniqueEntitiesId)
         })
     }, [currentPageReadability])
 
     const renderEntities = () => {
-        if (entities) {
-            return entities.map(entity => {
+        if (extensionEntities) {
+            return extensionEntities.map(entity => {
                 return (&lt;Badge valid
                                style={{cursor: 'pointer'}}
                                onClick={() => {
@@ -508,81 +512,13 @@ export default function KnowledgeDashBoard() {
                     }}
                 >
                     {/*How to make this header sticky*/}
-                    &lt;Header
-                        style={{
-                            position: "fixed", top: 0,
-                            width: "50%",
-                            display: "flex",
-                            zIndex: 1000000
-                        }}
-                    >
-                        &lt;ButtonGroup
-                            split={true}
-                        >
-                            &lt;Button
-                                id={"closeButton"}
-                                data-tip={"Collapse"}
-                                data-for={"collapse-tooltip"}
-                                style={{
-                                    paddingTop: "4px",
-                                    paddingLeft: "8px",
-                                    paddingRight: "8px",
-                                    height: "61px",
-                                }}
-                                icon={collapseIcon} onClick={() => {
-                                toggleSideBar()
-                            }}>&lt;/Button>
-                            &lt;ReactTooltip id={"collapse-tooltip"} place={"bottom"} effect={"solid"}>&lt;/ReactTooltip>
-                            {/*&lt;div style={{display: state.loadingResult ? "block" : "none",}}>*/}
-                            {/*    &lt;div className="ring-loader-inline"/>*/}
-                            {/*&lt;/div>*/}
-                        &lt;/ButtonGroup>
-                        &lt;Text>&lt;LoaderInline
-                            style={{
-                                display: state.loadingResult ? "inline-block" : "none",
-                                top: "4px"
-
-                            }}
-                        />&lt;/Text>
-                        &lt;Tray>
-
-
-                            &lt;TrayIcon
-                                icon={WolframIcon}
-                                data-tip={"Wolfram Alpha"}
-                                data-for={"wolfram-alpha-tooltip"}
-                                onClick={() => {
-                                    setState({...state, currentView: "WolframAlpha"})
-                                }
-                                }/>
-                            &lt;ReactTooltip id={"wolfram-alpha-tooltip"} place={"bottom"} effect={"solid"}>&lt;/ReactTooltip>
-
-                            &lt;TrayIcon
-                                icon={settingIcon}
-                                data-tip={"Settings"}
-                                data-for={"settings-tooltip"}
-                                onClick={(e) => {
-                                    setState({...state, currentView: "Settings"});
-                                }}
-                                id={"settingButton"}
-                            >
-                            &lt;/TrayIcon>
-                            &lt;ReactTooltip id={"settings-tooltip"} place={"bottom"} effect={"solid"}>&lt;/ReactTooltip>
-                            &lt;TrayIcon
-                                data-tip={"Source code"}
-                                data-for={"source-code-tooltip"}
-                                icon={starIcon}>&lt;/TrayIcon>
-                            &lt;ReactTooltip id={"source-code-tooltip"} place={"bottom"} effect={"solid"}>&lt;/ReactTooltip>
-                            &lt;TrayIcon
-                                data-tip={"Vote"}
-                                data-for={"vote-tooltip"}
-                                icon={likeIcon}
-                            >&lt;/TrayIcon>
-
-                            &lt;ReactTooltip id={"vote-tooltip"} place={"bottom"} effect={"solid"}>&lt;/ReactTooltip>
-                        &lt;/Tray>
-
-                    &lt;/Header>
+                    &lt;KnowledgeDashBoardHeader onClick={() => {
+                        toggleSideBar()
+                    }} state={state} onClick1={() => {
+                        setState({...state, currentView: "WolframAlpha"})
+                    }} onClick2={(e) => {
+                        setState({...state, currentView: "Settings"});
+                    }}/>
 
                     {isUsingDemoApi &amp;&amp; &lt;Panel>&lt;Text>
                         Using demo api. Only some queries like "Weather" work!. Go to &lt;Link
@@ -620,7 +556,6 @@ export default function KnowledgeDashBoard() {
                                     "", true, "")
 
                             }}
-
 
 
                             />
