feat: introduce new setting view in sepearate react app.

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -3,8 +3,11 @@
     <title>Settings</title>
     <link rel="stylesheet" href="settings.css">
 
+
 </head>
-<body>
+<body class="w-full h-full bg-gradient-to-br from-blue-500 via-violet-500  to-fuchsia-500 ">
+
+
 
 </body>
 <script type="module"
