deploy: eb5b75de68c5563f5e124328f1ef4f845608d48d

--- a/background.js.html
+++ b/background.js.html
@@ -49,6 +49,8 @@
     <section>
         <article>
             <pre class="prettyprint source linenums"><code>/*global chrome*/
+import {union} from "lodash";
+
 /**
  * @type {number|string}
  */
@@ -58,13 +60,42 @@ let ip = undefined
 let latlong = undefined
 
 let textRazorApi = undefined
+// Example: Parse a list of match patterns:
+var redefinedHosts = [
+    'google.com',
+    'facebook.com',
+    'wikipedia.org',
+    'nytimes.com'
+]
+// Example of filtering:
+chrome.tabs.onUpdated.addListener(function (tabId, changeInfo, tab) {
+    if (changeInfo.status === 'complete') {
+        chrome.storage.sync.get("hosts",(result) => {
+            let match = false;
+            const url = new URL(tab.url);
+            const host = url.host.replace(/^www\./, '');
+            const protocol = url.protocol;
+            if (protocol === 'http:' || protocol === 'https:') {
+                if (result.hosts.includes(host)) {
+                    match = true;
+                }
+            }
+            if (match) {
+                chrome.scripting.executeScript({
+                    target: {tabId: tabId},
+                        files: ['static/js/content.js']
+                    }
+                );
+            }
+        })
+    }
+});
 
 function settingsChangeListener() {
     chrome.storage.onChanged.addListener((changes, namespace) => {
-        console.log(changes)
+        console.log("Changes are: ", changes)
         if (changes.wolframApi) {
             api = changes.wolframApi.newValue
-
         }
         if (changes.location) {
             location = changes.location.newValue
@@ -78,7 +109,6 @@ function settingsChangeListener() {
         }
         if (changes.textRazorApi) {
             textRazorApi = changes.textRazorApi.newValue
-            console.log("text razor api is", textRazorApi)
         }
     })
 }
@@ -110,14 +140,22 @@ function setDefault() {
     chrome.storage.sync.get("latlong", (result) => {
         latlong = result.latlong
     })
+    chrome.storage.sync.get("hosts",
+        (result) => {
+            if (result.hosts === undefined){
+                chrome.storage.sync.set({hosts: redefinedHosts})
+            } else {
+                const userHosts = result.hosts
+                const unionHosts = union(redefinedHosts, userHosts)
+                chrome.storage.sync.set({hosts: unionHosts})
+            }
+        }
+    )
 }
 
 setDefault()
 
 
-/**
- *
- */
 
 // saveApiListener();
 /**
@@ -162,28 +200,8 @@ const getWolframFullResult = async (query,
     return fetch(url, requestOptions)
 }
 
-const getWolframShortResult = async (query) => {
-    var myHeaders = await new Headers();
 
-    var requestOptions = {
-        method: 'GET',
-        headers: myHeaders,
-        redirect: 'follow'
-    };
-
-    const q = encodeURIComponent(query);
-    // console.log("the api using in this query is ",api)
-    let baseUrl = 'https://api.wolframalpha.com/'
-    let apiPath = 'v1/spoken?'
-    let url = new URL(apiPath, baseUrl)
-    url.searchParams.set('appid', api)
-    url.searchParams.set('i', q)
-    url.search = decodeURI(url.search)
-    console.log("url for full result is ", url)
-    return fetch(url, requestOptions)
-}
-
-const getTextRazorResultEntities = async (query) => {
+const getTextRazorResultEntities =(query) => {
     var myHeaders = new Headers();
     myHeaders.append("Content-Type", "application/json");
     myHeaders.append("x-textrazor-key", textRazorApi);
@@ -218,16 +236,36 @@ const textRazorEntitiesListener = () => {
 textRazorEntitiesListener()
 
 
-
-
 const shortWolframAnswerListener = () => {
-    chrome.runtime.onMessage.addListener((msg, sender, sendResponse) => {
+    chrome.runtime.onMessage.addListener(async (msg, sender, sendResponse) => {
         if (msg.shortAnswerWolframQuery) {
-            getWolframShortResult(msg.shortAnswerWolframQuery).then((response) => {
-                response.text().then((result) => {
-                    console.log("The short answer result is ", result)
-                    sendResponse(result)
-                })
+            console.log("receive short wolfram query")
+            chrome.storage.sync.get(['wolframApi'],async (result) =>  {
+                const myHeaders =new Headers();
+
+                const requestOptions = {
+                    method: 'GET',
+                    headers: myHeaders,
+                    redirect: 'follow'
+                };
+
+                const q = encodeURIComponent(msg.shortAnswerWolframQuery);
+                // console.log("the api using in this query is ",api)
+                let baseUrl = 'https://api.wolframalpha.com/'
+                let apiPath = 'v1/spoken?'
+                let url = new URL(apiPath, baseUrl)
+                url.searchParams.set('appid', result.wolframApi)
+                url.searchParams.set('i', q)
+                url.search = decodeURI(url.search)
+                console.log("url for full result is ", url)
+                fetch(url, requestOptions).then(
+                    fetchResponse => {
+                        fetchResponse.text().then((result) => {
+                            console.log("The result is ", result)
+                            sendResponse(result)
+                        })
+                    }
+                )
             })
         }
     })
