--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@ bigger system.</p>
 <h5>Quick answer when typing if available</h5>
 <p><img src="showcases/pic6.png" alt="pic6"></p>
 <h5>Suggest most relevant entities (require TextRazor api key)</h5>
-<p><img src="showcases/pic7.png" alt="pic7"></p></article>
+<p><img src="showcases/pic7.png" alt="pic7"></p>
+<h5>Wisdoom only inject it power to the website you want</h5>
+<p><img src="showcases/pic8.png" alt="pic8"></p></article>
     </section>
 
 
