deploy: eaa9bcb80f19ce6dacddbff45cc8302cd89f2f1d

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         <article class="readme"><p><a href="https://github.com/nhannht/wisdoom/actions/workflows/github_pages.yml"><img src="https://github.com/nhannht/wisdoom/actions/workflows/github_pages.yml/badge.svg" alt="Github Pages"></a>
 <a href="https://github.com/nhannht/wisdoom/actions/workflows/release.yml"><img src="https://github.com/nhannht/wisdoom/actions/workflows/release.yml/badge.svg" alt="Create release"></a>
 <a href="https://github.com/nhannht/wisdoom/actions/workflows/release-beta.yml"><img src="https://github.com/nhannht/wisdoom/actions/workflows/release-beta.yml/badge.svg" alt="Create beta release"></a>
-<a href="https://zenhub.com"><img src="https://dxssrr2j0sq4w.cloudfront.net/3.2.0/img/external/zenhub-badge.png" alt="ZenHub logo"></a></p>
+<a href="https://zenhub.com"><img src="https://dxssrr2j0sq4w.cloudfront.net/3.2.0/img/external/zenhub-badge.png" alt="ZenHub logo"></a>
+<a href="https://github.com/nhannht/wisdoom/actions/workflows/codeql-analysis.yml"><img src="https://github.com/nhannht/wisdoom/actions/workflows/codeql-analysis.yml/badge.svg" alt="CodeQl scanning"></a>
+<a href="https://app.codiga.io/hub/project/35482/wisdoom"><img src="https://api.codiga.io/project/35482/score/svg" alt=""></a>
+<a href="https://app.codiga.io/hub/project/35482/wisdoom"><img src="https://api.codiga.io/project/35482/status/svg" alt=""></a></p>
 <p>Descendant of Wolfram Panda</p>
 <video controls>
 <source src="https://user-images.githubusercontent.com/69144096/211085462-81b60003-da61-4f71-a1d4-821f93afb858.mp4" 
